--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "firstApp",
+  "name": "quero-ler",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Salatiel Bairros",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "ionic serve",
+    "build": "ionic build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "ionic capacitor run android -l --address=192.168.0.6",
+	"add-android": "ionic capacitor add android",
+	"ide": "ionic capacitor run android"
   },
   "private": true,
   "dependencies": {
@@ -19,11 +22,12 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@capacitor/android": "^2.0.1",
     "@capacitor/core": "2.0.1",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^5.0.0",
+    "@ionic/angular": "^5.0.7",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
