--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "deploy": "ionic capacitor run android -l --address=192.168.0.6",
-	"add-android": "ionic capacitor add android",
-	"ide": "ionic capacitor run android"
+    "add-android": "ionic capacitor add android",
+    "ide": "ionic capacitor run android"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +28,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.7",
+    "@ionic/storage": "^2.2.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
