--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@angular/router": "~8.2.14",
     "@capacitor/android": "^2.0.1",
     "@capacitor/core": "2.0.1",
+    "@ionic-native/barcode-scanner": "^5.26.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.7",
     "@ionic/storage": "^2.2.0",
     "core-js": "^2.5.4",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
