--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@ionic-native/barcode-scanner": "^5.26.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/splash-screen": "^5.0.0",
+    "@ionic-native/sqlite": "^5.26.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.7",
     "@ionic/storage": "^2.2.0",
+    "cordova-sqlite-storage": "^5.0.0",
     "core-js": "^2.5.4",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
